// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserSubmissionRow renders 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-not-published-1.icon-img"
        >
          <View
            accessibilityLabel="Not Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": "#fff",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#8B969E",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 0.8,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              8/10
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View />
</View>
`;

exports[`UserSubmissionRow renders complete 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-not-published-1.icon-img"
        >
          <View
            accessibilityLabel="Not Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": "#fff",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#8B969E",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 1,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Complete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View />
</View>
`;

exports[`UserSubmissionRow renders excused 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-not-published-1.icon-img"
        >
          <View
            accessibilityLabel="Not Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": "#fff",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#8B969E",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#8B969E",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Excused
          </Text>
        </View>
      </View>
    </View>
  </View>
  <View />
</View>
`;

exports[`UserSubmissionRow renders incomplete 1`] = `
<View>
  <View
    style={
      Object {
        "marginLeft": -10,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={
        Array [
          "button",
        ]
      }
      accessible={true}
      hasTVPreferredFocus={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
          },
          Array [
            undefined,
            Object {
              "borderBottomColor": "#C7CDD1",
              "borderBottomWidth": 0.5,
            },
          ],
        ]
      }
      testID="user-submission-row.cell-1"
      tvParallaxProperties={undefined}
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "backgroundColor": "white",
              "flex": 1,
              "flexDirection": "row",
              "minHeight": 54,
              "paddingBottom": 12,
              "paddingLeft": 16,
              "paddingRight": 16,
              "paddingTop": 12,
            },
            Object {
              "backgroundColor": "white",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignSelf": "flex-start",
            }
          }
          testID="user-submission-row-icon-not-published-1.icon-img"
        >
          <View
            accessibilityLabel="Not Published"
            style={
              Object {
                "alignItems": "center",
                "flex": 0,
                "height": 32,
                "width": 46,
              }
            }
          >
            <Image
              source={1}
              style={
                Array [
                  Object {
                    "position": "absolute",
                  },
                  Object {
                    "tintColor": "#fff",
                  },
                ]
              }
            />
            <View
              style={
                Object {
                  "alignItems": "center",
                  "backgroundColor": "white",
                  "borderRadius": 8,
                  "height": 16,
                  "justifyContent": "center",
                  "left": 20,
                  "position": "absolute",
                  "top": 10,
                  "width": 16,
                }
              }
            >
              <Image
                source={1}
                style={
                  Object {
                    "height": 12,
                    "tintColor": "#8B969E",
                    "width": 12,
                  }
                }
              />
            </View>
          </View>
        </View>
        <View
          style={
            Object {
              "flex": 1,
              "flexDirection": "column",
              "justifyContent": "center",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            numberOfLines={2}
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontWeight": "600",
                  },
                  undefined,
                ],
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            learn to write code
          </Text>
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Array [
                  Object {
                    "fontSize": 14,
                    "paddingTop": 2,
                  },
                  Object {
                    "marginBottom": 8,
                  },
                  Object {
                    "color": "#07AF1F",
                  },
                ],
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
              ]
            }
          >
            Submitted
          </Text>
          <View
            style={
              Object {
                "flexDirection": "row",
              }
            }
          >
            <View
              style={
                Object {
                  "flex": 1,
                  "marginRight": 8,
                }
              }
            >
              <View
                style={
                  Object {
                    "backgroundColor": "#f5f5f5",
                    "borderColor": "transparent",
                    "flex": 1,
                    "height": 18,
                  }
                }
              />
              <View
                style={
                  Object {
                    "flexDirection": "row",
                    "height": 18,
                    "left": 0,
                    "position": "absolute",
                    "right": 0,
                  }
                }
              >
                <LinearGradient
                  colors={
                    Array [
                      "#008EE2",
                      "#00C1F3",
                    ]
                  }
                  end={
                    Object {
                      "x": 1,
                      "y": 0,
                    }
                  }
                  start={
                    Object {
                      "x": 0,
                      "y": 0,
                    }
                  }
                  style={
                    Object {
                      "flex": 0,
                      "height": 18,
                    }
                  }
                />
              </View>
            </View>
            <Text
              accessible={true}
              allowFontScaling={true}
              disabled={false}
              ellipsizeMode="tail"
              style={
                Array [
                  Object {
                    "fontFamily": ".SFUIDisplay",
                  },
                  Object {
                    "color": "#2D3B45",
                    "fontSize": 16,
                  },
                  Object {
                    "color": "#7F91A7",
                    "flex": 0,
                    "fontSize": 14,
                    "fontWeight": "500",
                    "minWidth": 67,
                  },
                  Object {
                    "fontFamily": ".SFUIDisplay-medium",
                  },
                ]
              }
            >
              Incomplete
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
  <View />
</View>
`;
